--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Reward for efforts</h1>
     <p>My reward for efforts today I'l get at <a href="https://www.facebook.com/groups/436132229914890/">Pub Човен.</a></p>
-    <img src=choven.png alt="Choven pub counter" />
+    <img src=choven.PNG alt="Choven pub counter" />
     
 </body>
 </html>
