--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <hr>
     <p>After a couple of Citra, Ipanema and Dry Stout by <a href="https://varvarbrew.com/">VARVAR</a></p>
     <figure>
-        <img src=citra.png alt="Varvar Citra" width=200 hight=300 />
+        <img src=citra.png alt="Varvar Citra" width=200 height=300 />
         <img src=ipanema.png alt="Varvar Ipanema" />
         <img src=dry_stout.png alt="Varvar Dry Stout" />
     </figure>
-    I'll sing <a href="https://www.google.com.ua/search?q=amsterdam+lyrics+nothing+but+thieves&oq=amsterdam+ly&aqs=chrome.2.69i57j0l5.8303j0j1&sourceid=chrome&ie=UTF-8"><b>Amsterdam</b></a></p>
+    <p>I'll sing <a href="https://www.google.com.ua/search?q=amsterdam+lyrics+nothing+but+thieves&oq=amsterdam+ly&aqs=chrome.2.69i57j0l5.8303j0j1&sourceid=chrome&ie=UTF-8"><b>Amsterdam</b></a></p>
     <p>So i </p>
 
 
