--- a/index.html
+++ b/index.html
@@ -23,15 +23,26 @@
     <br>
     <p>Maybe, the best</p>
     <hr>
-    <p>After a couple of Citra, Ipanema and Dry Stout by <a href="https://varvarbrew.com/">VARVAR</a></p>
+    <p>After a couple of Citra, Ipanema or Dry Stout by <a href="https://varvarbrew.com/">VARVAR</a></p>
     <figure>
         <img src=citra.png alt="Varvar Citra" width=200 height=300 />
-        <img src=ipanema.png alt="Varvar Ipanema" />
-        <img src=dry_stout.png alt="Varvar Dry Stout" />
+        <img src=ipanema.png alt="Varvar Ipanema" width=200 height=300 />
+        <img src=dry_stout.png alt="Varvar Dry Stout" width=200 height=300 />
     </figure>
     <p>I'll sing <a href="https://www.google.com.ua/search?q=amsterdam+lyrics+nothing+but+thieves&oq=amsterdam+ly&aqs=chrome.2.69i57j0l5.8303j0j1&sourceid=chrome&ie=UTF-8"><b>Amsterdam</b></a></p>
-    <p>So i </p>
-
+    <p>
+I hit my head against the wall
+Over, over, over</p>
+<p><b>Again and again and then over
+Over, over</b></p>
+<p><i>Again and again and then over
+Over, over</i></p>
+<p><strong>Again and again and then over
+Over, over </strong></p>
+<p><em>Again and again and then over
+Over, over</em></p>
+<p><small>Again and again and then over
+Over, over</small></p>
 
 </body>
 
