--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <hr>
     <p><i>My reward for efforts today I'll get at </i><a href="https://www.facebook.com/groups/436132229914890/"><b>Pub Човен</b>.</a></p>
     <img src=choven.PNG alt="Choven pub counter" />
-    <p>I'll drink <s>cider</s> beer.
-    Cause beer is a very good relaxant for me.</p>
+    <p>I'll drink <s>cider</s> beer. Cause beer is a very good relaxant for me.</p>
     <br>
     <p>Maybe, the best</p>
     <hr>
@@ -31,23 +30,22 @@
     </figure>
     <p>I'll sing <a href="https://www.google.com.ua/search?q=amsterdam+lyrics+nothing+but+thieves&oq=amsterdam+ly&aqs=chrome.2.69i57j0l5.8303j0j1&sourceid=chrome&ie=UTF-8"><b>Amsterdam</b></a></p>
     <p>
-I hit my head against the wall
-Over, over, over</p>
-<p><b>Again and again and then over
+        I hit my head against the wall Over, over, over</p>
+    <p><b>Again and again and then over
 Over, over</b></p>
-<p><i>Again and again and then over
+    <p><i>Again and again and then over
 Over, over</i></p>
-<p><strong>And I think about beeer Again and again and then over
+    <p><strong>And I think about beeer Again and again and then over
 Over, over </strong></p>
-<p><em>Again and again and then over
+    <p><em>Again and again and then over
 Over, over</em></p>
-<p><small>Again and again and then over
+    <p><small>Again and again and then over
 Over, over</small></p>
 
-<iframe width="640" height="360" src="https://www.youtube.com/embed/X2zcG3bcuMI" frameborder="0" allowfullscreen></iframe>
-<p>So, I'll try to do my homework well and get may reward</p>
-<p><b>CHEERS</b></p>
-<audio src="Beersound.mp3" controls="controls"></audio>
+    <iframe width="640" height="360" src="https://www.youtube.com/embed/X2zcG3bcuMI" frameborder="0" allowfullscreen></iframe>
+    <p>So, I'll try to do my homework well and get may reward</p>
+    <p><b>CHEERS</b></p>
+    <audio src="Beersound.mp3" controls="controls"></audio>
 
 </body>
 
