--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <hr>
     <p><i>My reward for efforts today I'll get at </i><a href="https://www.facebook.com/groups/436132229914890/"><b>Pub Човен</b>.</a></p>
     <img src=choven.PNG alt="Choven pub counter" />
-    <p>I'll drink <s>cider</s> beer. Cause beer is a very good relaxant for me.</p>
+    <p>I'll drink <s>cider</s> beer. Cause drinking beer is a very good relax for me.</p>
     <br>
     <p>Maybe, the best</p>
     <hr>
