--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <hr>
     <p>After a couple of Citra, Ipanema or Dry Stout by <a href="https://varvarbrew.com/">VARVAR</a></p>
     <figure>
-        <img src=citra.png alt="Varvar Citra" width=200 height=300 />
-        <img src=ipanema.png alt="Varvar Ipanema" width=200 height=300 />
-        <img src=dry_stout.png alt="Varvar Dry Stout" width=200 height=300 />
+        <a href="https://varvarbrew.com/nashe-pivo/postiyni-sorti/#9"><img src=citra.png alt="Varvar Citra " width=200 height=300 /></a>
+        <a href="https://varvarbrew.com/nashe-pivo/postiyni-sorti/#7"><img src=ipanema.png alt="Varvar Ipanema " width=200 height=300 /></a>
+        <a href="https://varvarbrew.com/nashe-pivo/postiyni-sorti/#3"><img src=dry_stout.png alt="Varvar Dry Stout " width=200 height=300 /></a>
     </figure>
-    <p>I'll sing <a href="https://www.google.com.ua/search?q=amsterdam+lyrics+nothing+but+thieves&oq=amsterdam+ly&aqs=chrome.2.69i57j0l5.8303j0j1&sourceid=chrome&ie=UTF-8"><b>Amsterdam</b></a></p>
+    <p>I'll sing <a href="https://www.google.com.ua/search?q=amsterdam+lyrics+nothing+but+thieves&oq=amsterdam+ly&aqs=chrome.2.69i57j0l5.8303j0j1&sourceid=chrome&ie=UTF-8 "><b>Amsterdam</b></a></p>
     <p>
         I hit my head against the wall Over, over, over</p>
     <p><b>Again and again and then over
@@ -42,10 +42,10 @@ Over, over</em></p>
     <p><small>Again and again and then over
 Over, over</small></p>
 
-    <iframe width="640" height="360" src="https://www.youtube.com/embed/X2zcG3bcuMI" frameborder="0" allowfullscreen></iframe>
+    <iframe width="640 " height="360 " src="https://www.youtube.com/embed/X2zcG3bcuMI " frameborder="0 " allowfullscreen></iframe>
     <p>So, I'll try to do my homework well and get may reward</p>
     <p><b>CHEERS</b></p>
-    <audio src="Beersound.mp3" controls="controls"></audio>
+    <audio src="Beersound.mp3 " controls="controls "></audio>
 
 </body>
 
