--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ Over, over</small></p>
     <p>So, I'll try to do my homework well and get may reward</p>
     <p><b>CHEERS</b></p>
     <audio src="Beersound.mp3 " controls="controls "></audio>
+    <p>P.S. <img src=tsypa.jpg alt="Pinta of Tsypa brewery beer" width=500 height=400 /></p>
 
 </body>
 
